--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1647,107 +1647,107 @@ stories:
   domain: http://www.thebrunswicknews.com/
   link: https://thebrunswicknews.com/ap/national/ohio-mayor-reflects-on-turbulent-year-of-shooting-tornadoes/image_8073ac4e-c05a-5c7a-9375-fa8d1c340fea.html
 images:
-- name: liberty-back-statue-liberty-back.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back.jpg
-- name: downtheline-downtheline-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-cinnamon-rolls.jpg
-- name: yosemite-yosemite-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
-- name: oldhotel-oldhotel-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-nazi-poster.jpg
-- name: power-lines-power-lines-empty-space-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-mucha-mult.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dry-skin.jpg
-- name: amusement-park-amusement-park-2-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-bright-sand.jpg
-- name: amusement-park-amusement-park-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-blocks.jpg
-- name: stalin-time-shipping-docks_36331347010_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-shipping-docks_36331347010_o.jpg
-- name: oldtrain-oldtrain-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-matrix.jpg
-- name: ellis-island-ellisisland-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crabapple.jpg
-- name: oldcabin-oldcabin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-plentiful.jpg
-- name: castle-wall-DSC-0067-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-atari-missle.JPG
-- name: lincoln-memorial-lincolnmemorial-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-three.jpg
-- name: mistywoods-babyfoot-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dali-three.jpg
-- name: amusement-park-amusement-park-2-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-feed-people.jpg
-- name: razorcliff-razorcliff-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-far-away.jpg
-- name: statue-of-liberty-front-view-statueofliberty-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-emily-carr.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-marcel-duchamp.jpg
-- name: stories-raven-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-raven-fence.jpg
-- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
-- name: border-fence-border-fence-on-hill-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-rainbow-festival.jpg
-- name: catacombs-catacombs-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-deep-connections.jpg
-- name: aws-s3-stories-old-yellow-house.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-yellow-house.jpg
-- name: oldroad-old-road-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-wols.jpg
-- name: downtown-la-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-feed-people.JPG
-- name: subway-subway-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-diego-rivera1.jpg
-- name: copper-circuit-IMG_7559.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7559.jpg
-- name: bf-skinner-docks-big-cosco-ship.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-docks-big-cosco-ship.jpg
-- name: bluelake-hot-spicy-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-00-38-67.jpg
-- name: copper-circuit-statue-of-liberty_36744433525_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty_36744433525_o.jpg
-- name: stalin-time-people-eating-canal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-people-eating-canal.jpg
-- name: aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
-- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
-- name: white-house-whitehouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-umberto-bocc.jpg
-- name: trucksilo-trucksilo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-attack-planes.jpg
-- name: store-on-corner-oldcabin-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-wols.jpg
-- name: cannon-facing-cannon-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-crafty-painting.jpg
-- name: mosaic-face-mosaic-face-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-spagetti-accident.jpg
-- name: rockingchair-rockingchair-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-smoking-cigarette.jpg
-- name: store-on-corner-store-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-asteroids.jpg
-- name: lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
-- name: stalin-time-dark-hallway-in-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dark-hallway-in-hotel.jpg
-- name: oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-- name: gears-4882162452-fa3126b38d-b-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-two.jpg
-- name: oldhouse-granaryfield-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-bright-sand.jpg
-- name: stalin-time-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cruise-ship-shore-log.jpg
-- name: beach-rocks-beach-rocks-currents-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-three.jpg
+- name: locked-up-steam-lock-up-steam-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-umberto-bocc.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
+- name: old-cabin-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-pond.jpg
+- name: stalin-time-nyc-streets-laundromat.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-nyc-streets-laundromat.jpg
+- name: cargo-ship-cargo-ship-on-sea-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crabapple.jpg
+- name: fence-mexico-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dark-rain.jpg
+- name: border-crossing-bordercrossing-gred-mash.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gred-mash.png
+- name: cargo-ship-cargo-ship-on-sea-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-far-away.jpg
+- name: berlinwall-DSC-0084-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-space-pizza.jpg
+- name: bf-skinner-white-house-press-room-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-press-room-flag.jpg
+- name: catacombs-catacombs-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-nazi-poster.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+- name: bordercrossing-bordercrossing-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smooth-ride.jpg
+- name: legal-statue-legalstatue-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-purple-pond.jpg
+- name: copper-circuit-docks-water-front-ships-containers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-docks-water-front-ships-containers.jpg
+- name: white-house-lawn-white-house-window-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-sunday.jpg
+- name: old-school-house-old-schoolhouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-graham-sutherland.jpg
+- name: oldhouse-granaryfield-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colorful-blocks.jpg
+- name: white-house-lawn-white-house-lawn-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crabapple.jpg
+- name: beach-clouds-lifeguard-beachclouds-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-asteroids.jpg
+- name: la-muse-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-electric-tower-sun-behind.jpg
+- name: sand-hand-sand-hand-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crafty-painting.jpg
+- name: beach-rocks-beach-rocks-currents-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-pablo-blue.jpg
+- name: window-window-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-really-hot.jpg
+- name: fence-mexico-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-gred-mash.jpg
+- name: downtown-la-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-marcel-duchamp.JPG
+- name: blossombar-purple-pond-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-24-99.jpg
+- name: aws-s3-stories-berlin-wall-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-berlin-wall-graham-sutherland.jpg
+- name: server-cloud-server-racks-clouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smooth-ride.jpg
+- name: capital-battle-capitolbattle-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-pond.jpg
+- name: server-cloud-server-racks-door.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door.jpg
+- name: copper-circuit-statue-face-looking-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-face-looking-up.jpg
+- name: stories-new-machine-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-machine-road-atari-missle.jpg
+- name: amusement-park-amusement-park-2-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-ww2-color.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-copper-circuit-2.JPG
+- name: downtheline-downtheline-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-emily-carr.jpg
+- name: windowmountain-window-mountain-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-satan-red.jpg
+- name: ellis-island-ellisisland-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gred-mash.jpg
+- name: abe-lincoln-one-really-hot-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-07-91.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
+- name: meadowbutterfly-meadow-butterfly-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-wols.jpg
+- name: status-berlin-status-berlin-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-aqua.jpg
+- name: gypsymosaic-gypsy-eyes-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-storm.jpg
+- name: oldhouse-oldhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kandinsky-bv.jpg
+- name: old-granary-field-granaryfield-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-atari-missle.jpg
+- name: oldcabin-store-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-really-hot.jpg
+- name: old-granary-field-granaryfield-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dry-skin.jpg
+- name: rockingchair-rockingchair-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-emily-carr.jpg
+- name: catacombs-catacombs-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smoking-cigarette.jpg
+- name: liberty-back-statue-liberty-back-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kandinsky-bv.jpg
 ---
 Oak Mitsui Selling Camden Facility To Nippon Denkai.&nbsp;Closure Of Keller Ferry Extended.&nbsp;Charles City Man Charged With Felony Sex Abuse.&nbsp;Injury Forces Mississippi State To Change QBs For Music City.&nbsp;Israel's Embattled Netanyahu Wins Landslide In Primary.&nbsp;Keown Reaches For The Stars, Finds Love, New Life In Sweden.&nbsp;Dallas Dismissed From Lawsuit Over Police Shooting.&nbsp;Treasure Acres Providing Family Fun During Holidays.&nbsp;
